--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
-            --bmg-blue: #00d4ff; /* লোগোর নতুন কালার */
+            --bmg-blue: #00d4ff; 
             --neon-orange: #ff9f00;
             --dark-bg: #030509;
             --card-bg: rgba(13, 18, 29, 0.98);
@@ -25,7 +25,6 @@
 
         header { width: 100%; padding: 60px 0 30px; text-align: center; }
 
-        /* BMG লোগো - সাদা কালার বাদ, গ্লো কমানো হয়েছে */
         .bmg-logo {
             font-family: 'Black Ops One', cursive;
             font-size: 5.5rem;
@@ -33,7 +32,7 @@
             color: var(--bmg-blue);
             text-transform: uppercase;
             letter-spacing: 8px;
-            text-shadow: 0 0 10px rgba(0, 212, 255, 0.5); /* গ্লো কমানো হয়েছে */
+            text-shadow: 0 0 10px rgba(0, 212, 255, 0.5);
             animation: soft-pulse 4s ease-in-out infinite;
         }
 
@@ -56,17 +55,13 @@
         .social-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); gap: 12px; width: 90%; max-width: 650px; margin: 20px 0; }
         .social-btn { display: flex; align-items: center; justify-content: center; gap: 8px; padding: 14px; border-radius: 12px; text-decoration: none; color: white; font-weight: bold; transition: 0.3s; font-size: 0.9rem; }
         .btn-discord { background: #5865F2; } .btn-facebook { background: #1877F2; } .btn-whatsapp { background: #25D366; } .btn-telegram { background: #0088cc; }
-        .social-btn:hover { transform: translateY(-3px); filter: brightness(1.1); }
 
-        /* ৩টি স্লট গ্রিড সেকশন */
         .container {
             width: 95%; max-width: 1200px;
             display: grid; 
-            grid-template-columns: repeat(3, 1fr); /* ৩টি কলাম ফিক্স করা হলো */
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
             gap: 20px; padding: 30px 0 60px;
         }
-
-        @media (max-width: 900px) { .container { grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); } }
 
         .card { background: var(--card-bg); border-radius: 15px; overflow: hidden; border: 1px solid rgba(255, 255, 255, 0.05); transition: 0.4s; }
         .card img { width: 100%; height: 200px; object-fit: cover; image-rendering: -webkit-optimize-contrast; }
@@ -75,7 +70,6 @@
         .download-btn { display: inline-block; width: 100%; background: linear-gradient(45deg, #222, #444); color: white; padding: 12px 0; text-decoration: none; border-radius: 8px; font-weight: bold; font-family: 'Orbitron'; font-size: 0.8rem; border: 1px solid #555; }
         .download-btn:hover { background: var(--bmg-blue); color: #000; border-color: var(--bmg-blue); }
 
-        /* রুলস বক্স */
         .rules-section { width: 90%; max-width: 800px; background: rgba(255, 0, 51, 0.05); border: 1px solid #ff0033; border-radius: 15px; padding: 25px; margin-bottom: 50px; }
         .rules-title { font-family: 'Orbitron'; color: #ff0033; font-size: 1.2rem; text-align: center; margin-bottom: 15px; }
         .rules-list { line-height: 2; color: #ccc; font-size: 0.95rem; }
@@ -126,6 +120,14 @@
         <div class="card-content">
             <h3>HANIF BUS SKIN</h3>
             <a href="https://drive.google.com/file/d/1-HalrVa1FkDsAT3_35_TEe_H59f1Mtd3/view?usp=drivesdk" class="download-btn" target="_blank">DOWNLOAD</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="https://i.postimg.cc/xd3DJxrn/1772251242011.png" alt="Bangladeshi OBB">
+        <div class="card-content">
+            <h3>BANGLADESHI OBB</h3>
+            <a href="https://drive.google.com/drive/folders/1eL3o9p77wz8b_dTCBSBGOGc-rNYkPuOQ" class="download-btn" target="_blank">DOWNLOAD</a>
         </div>
     </div>
 </div>
