--- a/index.html
+++ b/index.html
@@ -59,16 +59,26 @@
         .container {
             width: 95%; max-width: 1200px;
             display: grid; 
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); 
             gap: 20px; padding: 30px 0 60px;
         }
 
         .card { background: var(--card-bg); border-radius: 15px; overflow: hidden; border: 1px solid rgba(255, 255, 255, 0.05); transition: 0.4s; }
-        .card img { width: 100%; height: 200px; object-fit: cover; image-rendering: -webkit-optimize-contrast; }
+        .card img { width: 100%; height: 200px; object-fit: cover; }
         .card-content { padding: 20px; text-align: center; }
         .card-content h3 { font-family: 'Orbitron'; font-size: 1rem; color: #fff; margin-bottom: 15px; }
         .download-btn { display: inline-block; width: 100%; background: linear-gradient(45deg, #222, #444); color: white; padding: 12px 0; text-decoration: none; border-radius: 8px; font-weight: bold; font-family: 'Orbitron'; font-size: 0.8rem; border: 1px solid #555; }
         .download-btn:hover { background: var(--bmg-blue); color: #000; border-color: var(--bmg-blue); }
+
+        /* নিকনেম সেকশন */
+        .nickname-box {
+            width: 90%; max-width: 800px;
+            background: linear-gradient(90deg, rgba(0, 212, 255, 0.1), transparent);
+            border-left: 5px solid var(--bmg-blue);
+            padding: 20px; border-radius: 10px; margin-bottom: 30px; text-align: center;
+        }
+        .nickname-box h4 { font-family: 'Orbitron'; margin: 0 0 10px; color: var(--bmg-blue); letter-spacing: 2px; }
+        .tag-display { font-size: 1.8rem; font-weight: bold; color: #fff; background: #000; padding: 10px 20px; border-radius: 5px; display: inline-block; margin: 10px 0; border: 1px dashed var(--bmg-blue); }
 
         .rules-section { width: 90%; max-width: 800px; background: rgba(255, 0, 51, 0.05); border: 1px solid #ff0033; border-radius: 15px; padding: 25px; margin-bottom: 50px; }
         .rules-title { font-family: 'Orbitron'; color: #ff0033; font-size: 1.2rem; text-align: center; margin-bottom: 15px; }
@@ -130,6 +140,13 @@
             <a href="https://drive.google.com/drive/folders/1eL3o9p77wz8b_dTCBSBGOGc-rNYkPuOQ" class="download-btn" target="_blank">DOWNLOAD</a>
         </div>
     </div>
+</div>
+
+<div class="nickname-box">
+    <h4>⚠️ OFFICIAL PLAYER TAG ⚠️</h4>
+    <p style="color: #aaa; margin: 5px 0;">আমাদের গ্রুপে মাল্টিপ্লেয়ার খেলার জন্য আপনার নামের আগে নিচের ট্যাগটি ব্যবহার করুন:</p>
+    <div class="tag-display">‎☯ᴇʙʟ (আপনার নাম)</div>
+    <p style="color: #666; font-size: 0.8rem;">উদাহরণ: ‎☯ᴇʙʟ NISHAT</p>
 </div>
 
 <div class="rules-section">
