--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BMG BUSSID HUB | Official</title>
+    <title>BMG BUSSID HUB | Official Portal</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=Rajdhani:wght@500;700&family=Black+Ops+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -64,13 +64,12 @@
         }
 
         .card { background: var(--card-bg); border-radius: 15px; overflow: hidden; border: 1px solid rgba(255, 255, 255, 0.05); transition: 0.4s; }
-        .card img { width: 100%; height: 200px; object-fit: cover; }
+        .card img { width: 100%; height: 200px; object-fit: cover; image-rendering: -webkit-optimize-contrast; }
         .card-content { padding: 20px; text-align: center; }
-        .card-content h3 { font-family: 'Orbitron'; font-size: 1rem; color: #fff; margin-bottom: 15px; }
+        .card-content h3 { font-family: 'Orbitron'; font-size: 0.9rem; color: #fff; margin-bottom: 15px; text-transform: uppercase; }
         .download-btn { display: inline-block; width: 100%; background: linear-gradient(45deg, #222, #444); color: white; padding: 12px 0; text-decoration: none; border-radius: 8px; font-weight: bold; font-family: 'Orbitron'; font-size: 0.8rem; border: 1px solid #555; }
         .download-btn:hover { background: var(--bmg-blue); color: #000; border-color: var(--bmg-blue); }
 
-        /* নিকনেম সেকশন */
         .nickname-box {
             width: 90%; max-width: 800px;
             background: linear-gradient(90deg, rgba(0, 212, 255, 0.1), transparent);
@@ -140,11 +139,18 @@
             <a href="https://drive.google.com/drive/folders/1eL3o9p77wz8b_dTCBSBGOGc-rNYkPuOQ" class="download-btn" target="_blank">DOWNLOAD</a>
         </div>
     </div>
+
+    <div class="card">
+        <img src="https://i.postimg.cc/nrw6g0j0/Picsart-26-02-28-20-04-33-608.png" alt="Hanif Premium Skin">
+        <div class="card-content">
+            <h3>HANIF PREMIUM SKIN</h3>
+            <a href="https://drive.google.com/drive/folders/1NIbDOci8r6wN3g_UUSnRbbRz1yPY9LvQ" class="download-btn" target="_blank">DOWNLOAD</a>
+        </div>
+    </div>
 </div>
 
 <div class="nickname-box">
     <h4>⚠️ OFFICIAL PLAYER TAG ⚠️</h4>
-    <p style="color: #aaa; margin: 5px 0;">আমাদের গ্রুপে মাল্টিপ্লেয়ার খেলার জন্য আপনার নামের আগে নিচের ট্যাগটি ব্যবহার করুন:</p>
     <div class="tag-display">‎☯ᴇʙʟ (আপনার নাম)</div>
     <p style="color: #666; font-size: 0.8rem;">উদাহরণ: ‎☯ᴇʙʟ NISHAT</p>
 </div>
