--- a/index.html
+++ b/index.html
@@ -147,6 +147,14 @@
             <a href="https://drive.google.com/drive/folders/1NIbDOci8r6wN3g_UUSnRbbRz1yPY9LvQ" class="download-btn" target="_blank">DOWNLOAD</a>
         </div>
     </div>
+
+    <div class="card">
+        <img src="https://i.postimg.cc/jS6M65Xj/Chat-GPT-Image-Mar-1-2026-05-11-31-PM.png" alt="BMG GROUP Premium Skin">
+        <div class="card-content">
+            <h3>BMG GROUP PREMIUM SKIN</h3>
+            <a href="https://drive.google.com/drive/folders/1WxqvxUdkvEkXlLhwg7e89ne5YWLHQs6s" class="download-btn" target="_blank">DOWNLOAD</a>
+        </div>
+    </div>
 </div>
 
 <div class="nickname-box">
